Changed format on about page

--- a/content/about.html
+++ b/content/about.html
@@ -15,6 +15,7 @@ description = "NATS is a high performance messaging queue system designed for di
 </div>
 
 <p class="lead">NATS acts as a central nervous system for distributed systems such as mobile devices, IoT networks, enterprise microservices and cloud native infrastructure. Unlike traditional enterprise messaging systems, NATS provides an always on ‘dial-tone’.</p>
+<p>NATS was created by Derek Collison, Founder and CEO at Apcera. Derek has spent over twenty years designing, building and using publish-subscribe messaging systems. Learn why traditional enterprise messaging systems don’t work for today’s distributed infrastructure, in this talk from Derek at SCALE on designing a new cloud-native messaging framework.</p>
 
 <hr>
 
@@ -30,13 +31,50 @@ description = "NATS is a high performance messaging queue system designed for di
 
 <div class="row">
   <div class="col-md-6">
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/5GcAgMPECxE" allowfullscreen></iframe>
-    </div>
+    <p>Written in Go, NATS is available as a client for approximately a dozen languages, many of which are supported by the Apcera team. Here’s the full list of <a href="/download">NATS clients</a>.</p>
   </div>
   <div class="col-md-6">
-    <p>NATS was created by Derek Collison, Founder and CEO at Apcera. Derek has spent over twenty years designing, building and using publish-subscribe messaging systems. Learn why traditional enterprise messaging systems don’t work for today’s distributed infrastructure, in this talk from Derek at SCALE on designing a new cloud-native messaging framework.</p>
+    <p>NATS is unique in its simplicity and performance, and as a result powers some of the largest production environments.. You can learn more about the design characteristics in the <a href="/documentation/faq/">NATS FAQ</a>.</p>
   </div>
 </div>
 
 <hr>
+
+<h2>Resources</h2>
+<div class="row">
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/5GcAgMPECxE" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h5>[SCaLE 13x] Derek Collison | NATS: A new nervous system for distributed cloud platforms</h5>
+        <ul class="list-unstyled">
+          <li><a target="_blank" href="https://youtu.be/5GcAgMPECxE">Video</a></li>
+          <li><a target="_blank" href="http://www.socallinuxexpo.org/sites/default/files/presentations/NATS-SCaLE-13x.pdf">Slidedeck</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h5>Simple Solutions for Complex Problems: How Workiva uses NATS as a Microservices and RPC transport</h5>
+        <ul class="list-unstyled">
+          <li><a target="_blank" href="https://youtu.be/4GIt2JIf6So">Video</a></li>
+          <li><a target="_blank" href="http://www.slideshare.net/Apcera/simple-solutions-for-complex-problems">Slidedeck</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-12">
+    <h2>NATS Streaming<h2>
+    <p class="lead">Need more information about NATS Streaming here.</p>
+  </div>
+</div>
