--- a/content/about.html
+++ b/content/about.html
@@ -46,23 +46,24 @@ description = "NATS is a high performance messaging queue system designed for di
     <div class="embed-responsive embed-responsive-16by9">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/5GcAgMPECxE" allowfullscreen></iframe>
     </div>
-  </div>
-
-  <div class="col-md-6">
     <div class="panel panel-default">
       <div class="panel-body">
         <h5>[SCaLE 13x] Derek Collison | NATS: A new nervous system for distributed cloud platforms</h5>
         <ul class="list-unstyled">
-          <li><a target="_blank" href="https://youtu.be/5GcAgMPECxE">Video</a></li>
           <li><a target="_blank" href="http://www.socallinuxexpo.org/sites/default/files/presentations/NATS-SCaLE-13x.pdf">Slidedeck</a></li>
         </ul>
       </div>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/4GIt2JIf6So" allowfullscreen></iframe>
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
         <h5>Simple Solutions for Complex Problems: How Workiva uses NATS as a Microservices and RPC transport</h5>
         <ul class="list-unstyled">
-          <li><a target="_blank" href="https://youtu.be/4GIt2JIf6So">Video</a></li>
           <li><a target="_blank" href="http://www.slideshare.net/Apcera/simple-solutions-for-complex-problems">Slidedeck</a></li>
         </ul>
       </div>
