--- a/content/index.html
+++ b/content/index.html
@@ -16,10 +16,9 @@ description = ""
         <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
         <div class="row">
           <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-            <h2>Introducing NATS Streaming: Real-time streaming for IoT, Mobile, and Cloud Native Applications</h2>
-            <p class="lead">NATS Streaming provides real-time stream processing, at-least-once delivery, and persistence for Big Data and IoT.</p>
+            <h2>Introducing <strong>NATS Streaming</strong>: Real-time streaming for Big Data, IoT, Mobile, and Cloud Native Applications</h2>
             <p class="extra-info">
-              <a id="download-button" class="btn btn-lg" href="/download">Download</a>
+              <a id="download-button" class="btn btn-lg" href="/">Learn More</a>
             </p>
 
             <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
