--- a/content/index.html
+++ b/content/index.html
@@ -18,7 +18,7 @@ description = ""
           <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
             <h2>Introducing <strong>NATS Streaming</strong>: Real-time streaming for Big Data, IoT, Mobile, and Cloud Native Applications</h2>
             <p class="extra-info">
-              <a id="download-button" class="btn btn-lg" href="/">Learn More</a>
+              <a id="download-button" class="btn btn-lg" href="/documentation/streaming/nats-streaming-intro/">Learn More</a>
             </p>
 
             <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
