Updated navigation side wide to be more consistant and to take advatage of the latest hugo features

--- a/content/download/DawnAngel/lua-nats.html
+++ b/content/download/DawnAngel/lua-nats.html
@@ -3,7 +3,7 @@ title = "Lua NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["lua"]
-[menu.downloads]
+[menu.main]
   name = "Lua"
   weight = 0
   identifier = "Lua"
