--- a/content/download/carwynmoore/perl-nats.html
+++ b/content/download/carwynmoore/perl-nats.html
@@ -3,7 +3,7 @@ title = "Perl NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["perl"]
-[menu.downloads]
+[menu.main]
   name = "Perl"
   weight = 0
   identifier = "Perl"
