--- a/content/download/cloudfoundry-community/java-nats.html
+++ b/content/download/cloudfoundry-community/java-nats.html
@@ -3,7 +3,7 @@ title = "Spring API NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["java"]
-[menu.downloads]
+[menu.main]
   name = "Spring API"
   weight = 0
   identifier = "Spring API"
