--- a/content/download/jedisct1/rust-nats.html
+++ b/content/download/jedisct1/rust-nats.html
@@ -3,7 +3,7 @@ title = "Rust NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["rust"]
-[menu.downloads]
+[menu.main]
   name = "Rust"
   weight = 0
   identifier = "Rust"
