--- a/content/download/johnwlockwood/txnats.html
+++ b/content/download/johnwlockwood/txnats.html
@@ -3,7 +3,7 @@ title = "Python Twisted NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["python"]
-[menu.downloads]
+[menu.main]
   name = "Python Twisted"
   weight = 0
   identifier = "Python Twisted"
