--- a/content/download/joshglendenning/arduino-nats.html
+++ b/content/download/joshglendenning/arduino-nats.html
@@ -3,7 +3,7 @@ title = "Arduino NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["c++"]
-[menu.downloads]
+[menu.main]
   name = "Arduino"
   weight = 0
   identifier = "Arduino"
