--- a/content/download/nats-io/csnats.html
+++ b/content/download/nats-io/csnats.html
@@ -3,7 +3,7 @@ title = "C# NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["c#"]
-[menu.downloads]
+[menu.main]
   name = "C#"
   weight = 0
   identifier = "C#"
