--- a/content/download/nats-io/elixir-nats.html
+++ b/content/download/nats-io/elixir-nats.html
@@ -3,7 +3,7 @@ title = "Elixir NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["elixir"]
-[menu.downloads]
+[menu.main]
   name = "Elixir"
   weight = 0
   identifier = "Elixir"
