--- a/content/download/nats-io/jnats.html
+++ b/content/download/nats-io/jnats.html
@@ -3,7 +3,7 @@ title = "Java NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["java"]
-[menu.downloads]
+[menu.main]
   name = "Java"
   weight = 0
   identifier = "Java"
