--- a/content/download/nats-io/nats-streaming-server.html
+++ b/content/download/nats-io/nats-streaming-server.html
@@ -3,7 +3,7 @@ title = "NATS Streaming"
 description = ""
 categories = ["streaming","supported"]
 tags = ["streaming"]
-[menu.downloads]
+[menu.main]
   name = "NATS Streaming Server"
   weight = 0
   identifier = "NATS Streaming Server"
