--- a/content/download/nats-io/nats.html
+++ b/content/download/nats-io/nats.html
@@ -3,7 +3,7 @@ title = "Go NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["golang"]
-[menu.downloads]
+[menu.main]
   name = "Go"
   weight = 0
   identifier = "Go"
