--- a/content/download/nats-io/nginx-nats.html
+++ b/content/download/nats-io/nginx-nats.html
@@ -3,7 +3,7 @@ title = "NGINX NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["c"]
-[menu.downloads]
+[menu.main]
   name = "NGINX"
   weight = 0
   identifier = "NGINX"
