--- a/content/download/nats-io/node-nats.html
+++ b/content/download/nats-io/node-nats.html
@@ -3,7 +3,7 @@ title = "Node.js NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["javascript"]
-[menu.downloads]
+[menu.main]
   name = "Node.js"
   weight = 0
   identifier = "Node.js"
