--- a/content/download/nats-io/ruby-nats.html
+++ b/content/download/nats-io/ruby-nats.html
@@ -3,7 +3,7 @@ title = "Ruby NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["ruby"]
-[menu.downloads]
+[menu.main]
   name = "Ruby"
   weight = 0
   identifier = "Ruby"
