--- a/content/download/ondrap/nats-queue.html
+++ b/content/download/ondrap/nats-queue.html
@@ -3,7 +3,7 @@ title = "Haskell NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["haskell"]
-[menu.downloads]
+[menu.main]
   name = "Haskell"
   weight = 0
   identifier = "Haskell"
