--- a/content/download/repejota/phpnats.html
+++ b/content/download/repejota/phpnats.html
@@ -3,7 +3,7 @@ title = "PHP NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["php"]
-[menu.downloads]
+[menu.main]
   name = "PHP"
   weight = 0
   identifier = "PHP"
