--- a/content/download/tyagihas/scala_nats.html
+++ b/content/download/tyagihas/scala_nats.html
@@ -3,7 +3,7 @@ title = "Scala NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["scala"]
-[menu.downloads]
+[menu.main]
   name = "Scala"
   weight = 0
   identifier = "Scala"
