--- a/content/download/yuce/teacup_nats.html
+++ b/content/download/yuce/teacup_nats.html
@@ -3,7 +3,7 @@ title = "Erlang NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["erlang"]
-[menu.downloads]
+[menu.main]
   name = "Erlang"
   weight = 0
   identifier = "Erlang"
