--- a/content/download/mcuadros/pynats.html
+++ b/content/download/mcuadros/pynats.html
@@ -3,7 +3,7 @@ title = "Python NATS Client"
 description = ""
 categories = ["clients","community"]
 tags = ["python"]
-[menu.downloads]
+[menu.main]
   name = "Python"
   weight = 0
   identifier = "Python"
