--- a/content/download/nats-io/asyncio-nats.html
+++ b/content/download/nats-io/asyncio-nats.html
@@ -3,7 +3,7 @@ title = "Python Asyncio NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["python"]
-[menu.downloads]
+[menu.main]
   name = "Python Asyncio"
   weight = 0
   identifier = "Python Asyncio"
