--- a/content/download/nats-io/gnatsd.html
+++ b/content/download/nats-io/gnatsd.html
@@ -3,7 +3,7 @@ title = "NATS Server"
 description = ""
 categories = ["server","supported"]
 tags = ["server"]
-[menu.downloads]
+[menu.main]
   name = "NATS Server"
   weight = 0
   identifier = "NATS Server"
