--- a/content/download/nats-io/go-nats-streaming.html
+++ b/content/download/nats-io/go-nats-streaming.html
@@ -3,7 +3,7 @@ title = "Go NATS Streaming"
 description = ""
 categories = ["streaming","supported"]
 tags = ["streaming"]
-[menu.downloads]
+[menu.main]
   name = "Go"
   weight = 0
   identifier = "Go NATS Streaming"
