--- a/content/download/nats-io/python-nats.html
+++ b/content/download/nats-io/python-nats.html
@@ -3,7 +3,7 @@ title = "Python Tornado NATS Client"
 description = ""
 categories = ["clients","supported"]
 tags = ["python"]
-[menu.downloads]
+[menu.main]
   name = "Python Tornado"
   weight = 0
   identifier = "Python Tornado"
