Updated nats streaming more info button on community and removed the palceholder for copy on about

--- a/content/community.html
+++ b/content/community.html
@@ -23,7 +23,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 <hr>
 
 <div class="alert alert-info" role="alert">
-  <strong>NATS Streaming is now available!</strong> - Check out the <a href="/documentation">documentation</a> to get started.
+  <strong>NATS Streaming is now available!</strong> - Check out the <a href="/documentation/streaming/nats-streaming-intro/">documentation</a> to get started.
 </div>
 
 <div class="row">
