--- a/content/about.html
+++ b/content/about.html
@@ -14,8 +14,9 @@ description = "NATS is a high performance messaging queue system designed for di
   </div>
 </div>
 
-<p class="lead">NATS acts as a central nervous system for distributed systems such as mobile devices, IoT networks, enterprise microservices and cloud native infrastructure. Unlike traditional enterprise messaging systems, NATS provides an always on ‘dial-tone’.</p>
-<p>NATS was created by Derek Collison, Founder and CEO at Apcera. Derek has spent over twenty years designing, building and using publish-subscribe messaging systems. Learn why traditional enterprise messaging systems don’t work for today’s distributed infrastructure, in this talk from Derek at SCALE on designing a new cloud-native messaging framework.</p>
+<p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally for thousands of innovative use-cases such as mobile, IoT, microservices and cloud native applications.</p>
+<p>The core NATS Server acts as a central nervous system for building distributed applications. There are dozens of clients ranging from Java, .Net, to GO. NATS Streaming extends the platform to provide for real-time streaming &amp; big data use-cases.</p>
+<p>NATS was created by Derek Collison, Founder and CEO at Apcera in response to the market need for a simple and high performance messaging solution. NATS is currently deployed in some of the largest cloud platforms, including: VMware, CloudFoundry, Baidu, Siemens, and GE. NATS is available under the MIT Open Source License.</p>
 
 <hr>
 
