Fixed the tags and categories for downloads and blog do there was not cross pollination

--- a/content/download/DawnAngel/lua-nats.html
+++ b/content/download/DawnAngel/lua-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Lua NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["lua"]
+downloadCategories = ["clients","community"]
+downloadTags = ["lua"]
 [menu.main]
   name = "Lua"
   weight = 0
