--- a/content/download/carwynmoore/perl-nats.html
+++ b/content/download/carwynmoore/perl-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Perl NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["perl"]
+downloadCategories = ["clients","community"]
+downloadTags = ["perl"]
 [menu.main]
   name = "Perl"
   weight = 0
