--- a/content/download/cloudfoundry-community/java-nats.html
+++ b/content/download/cloudfoundry-community/java-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Spring API NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["java"]
+downloadCategories = ["clients","community"]
+downloadTags = ["java"]
 [menu.main]
   name = "Spring API"
   weight = 0
