--- a/content/download/jedisct1/rust-nats.html
+++ b/content/download/jedisct1/rust-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Rust NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["rust"]
+downloadCategories = ["clients","community"]
+downloadTags = ["rust"]
 [menu.main]
   name = "Rust"
   weight = 0
