--- a/content/download/joshglendenning/arduino-nats.html
+++ b/content/download/joshglendenning/arduino-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Arduino NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["c++"]
+downloadCategories = ["clients","community"]
+downloadTags = ["c++"]
 [menu.main]
   name = "Arduino"
   weight = 0
