--- a/content/download/nats-io/asyncio-nats.html
+++ b/content/download/nats-io/asyncio-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Python Asyncio NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["python"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["python"]
 [menu.main]
   name = "Python Asyncio"
   weight = 0
