--- a/content/download/nats-io/csnats.html
+++ b/content/download/nats-io/csnats.html
@@ -1,8 +1,8 @@
 +++
 title = "C# NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["c#"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["c#"]
 [menu.main]
   name = "C#"
   weight = 0
