--- a/content/download/nats-io/elixir-nats.html
+++ b/content/download/nats-io/elixir-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Elixir NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["elixir"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["elixir"]
 [menu.main]
   name = "Elixir"
   weight = 0
