--- a/content/download/nats-io/gnatsd.html
+++ b/content/download/nats-io/gnatsd.html
@@ -1,8 +1,8 @@
 +++
 title = "NATS Server"
 description = ""
-categories = ["server","supported"]
-tags = ["server"]
+downloadCategories = ["server","supported"]
+downloadTags = ["server"]
 [menu.main]
   name = "NATS Server"
   weight = 0
