--- a/content/download/nats-io/go-nats-streaming.html
+++ b/content/download/nats-io/go-nats-streaming.html
@@ -1,8 +1,8 @@
 +++
 title = "Go NATS Streaming"
 description = ""
-categories = ["streaming","supported"]
-tags = ["streaming"]
+downloadCategories = ["streaming","supported"]
+downloadTags = ["streaming"]
 [menu.main]
   name = "Go"
   weight = 0
