--- a/content/download/nats-io/jnats.html
+++ b/content/download/nats-io/jnats.html
@@ -1,8 +1,8 @@
 +++
 title = "Java NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["java"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["java"]
 [menu.main]
   name = "Java"
   weight = 0
