--- a/content/download/nats-io/nats-streaming-server.html
+++ b/content/download/nats-io/nats-streaming-server.html
@@ -1,8 +1,8 @@
 +++
 title = "NATS Streaming"
 description = ""
-categories = ["streaming","supported"]
-tags = ["streaming"]
+downloadCategories = ["streaming","supported"]
+downloadTags = ["streaming"]
 [menu.main]
   name = "NATS Streaming Server"
   weight = 0
