--- a/content/download/nats-io/nats.html
+++ b/content/download/nats-io/nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Go NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["golang"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["golang"]
 [menu.main]
   name = "Go"
   weight = 0
