--- a/content/download/nats-io/node-nats.html
+++ b/content/download/nats-io/node-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Node.js NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["javascript"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["javascript"]
 [menu.main]
   name = "Node.js"
   weight = 0
