--- a/content/download/nats-io/ruby-nats.html
+++ b/content/download/nats-io/ruby-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Ruby NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["ruby"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["ruby"]
 [menu.main]
   name = "Ruby"
   weight = 0
