--- a/content/download/ondrap/nats-queue.html
+++ b/content/download/ondrap/nats-queue.html
@@ -1,8 +1,8 @@
 +++
 title = "Haskell NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["haskell"]
+downloadCategories = ["clients","community"]
+downloadTags = ["haskell"]
 [menu.main]
   name = "Haskell"
   weight = 0
