--- a/content/download/repejota/phpnats.html
+++ b/content/download/repejota/phpnats.html
@@ -1,8 +1,8 @@
 +++
 title = "PHP NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["php"]
+downloadCategories = ["clients","community"]
+downloadTags = ["php"]
 [menu.main]
   name = "PHP"
   weight = 0
