--- a/content/download/tyagihas/scala_nats.html
+++ b/content/download/tyagihas/scala_nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Scala NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["scala"]
+downloadCategories = ["clients","community"]
+downloadTags = ["scala"]
 [menu.main]
   name = "Scala"
   weight = 0
