--- a/content/download/yuce/teacup_nats.html
+++ b/content/download/yuce/teacup_nats.html
@@ -1,8 +1,8 @@
 +++
 title = "Erlang NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["erlang"]
+downloadCategories = ["clients","community"]
+downloadTags = ["erlang"]
 [menu.main]
   name = "Erlang"
   weight = 0
