--- a/content/download/johnwlockwood/txnats.html
+++ b/content/download/johnwlockwood/txnats.html
@@ -1,8 +1,8 @@
 +++
 title = "Python Twisted NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["python"]
+downloadCategories = ["clients","community"]
+downloadTags = ["python"]
 [menu.main]
   name = "Python Twisted"
   weight = 0
