--- a/content/download/mcuadros/pynats.html
+++ b/content/download/mcuadros/pynats.html
@@ -1,8 +1,8 @@
 +++
 title = "Python NATS Client"
 description = ""
-categories = ["clients","community"]
-tags = ["python"]
+downloadCategories = ["clients","community"]
+downloadTags = ["python"]
 [menu.main]
   name = "Python"
   weight = 0
