--- a/content/download/nats-io/nginx-nats.html
+++ b/content/download/nats-io/nginx-nats.html
@@ -1,8 +1,8 @@
 +++
 title = "NGINX NATS Client"
 description = ""
-categories = ["clients","supported"]
-tags = ["c"]
+downloadCategories = ["clients","supported"]
+downloadTags = ["c"]
 [menu.main]
   name = "NGINX"
   weight = 0
