Updated partners link on community, udpated README, and removed an unused content file

--- a/content/community.html
+++ b/content/community.html
@@ -87,6 +87,8 @@ description = "NATS is a high performance messaging system that acts as a distri
   </div>
 </div>
 
+<p class="text-center"><a href="mailto:info@nats.io">Contact us to Partner.</a></p>
+
 <hr>
 
 <h2>Ecosystem</h2>
