Added swift community client

--- a/content/download/nats-io/go-nats-streaming.html
+++ b/content/download/nats-io/go-nats-streaming.html
@@ -2,7 +2,7 @@
 title = "Go NATS Streaming"
 description = ""
 downloadCategories = ["streaming","supported"]
-downloadTags = ["streaming"]
+downloadTags = ["streaming","go"]
 [menu.main]
   name = "Go"
   weight = 0
