--- a/content/download/nats-io/java-nats-streaming.html
+++ b/content/download/nats-io/java-nats-streaming.html
@@ -2,7 +2,7 @@
 title = "Java NATS Streaming"
 description = ""
 downloadCategories = ["streaming","supported"]
-downloadTags = ["streaming"]
+downloadTags = ["streaming","java"]
 [menu.main]
   name = "Java"
   weight = 0
