--- a/content/download/mcuadros/pynats.html
+++ b/content/download/mcuadros/pynats.html
@@ -7,5 +7,5 @@ downloadTags = ["python"]
   name = "Python"
   weight = 0
   identifier = "Python"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
