--- a/content/download/repejota/phpnats.html
+++ b/content/download/repejota/phpnats.html
@@ -7,5 +7,5 @@ downloadTags = ["php"]
   name = "PHP"
   weight = 0
   identifier = "PHP"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
