--- a/content/download/joshglendenning/arduino-nats.html
+++ b/content/download/joshglendenning/arduino-nats.html
@@ -7,5 +7,5 @@ downloadTags = ["c++"]
   name = "Arduino"
   weight = 0
   identifier = "Arduino"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
