--- a/content/download/ondrap/nats-queue.html
+++ b/content/download/ondrap/nats-queue.html
@@ -7,5 +7,5 @@ downloadTags = ["haskell"]
   name = "Haskell"
   weight = 0
   identifier = "Haskell"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
