Quick menu hotfix

--- a/content/download/iamd3vil/nats_ex.html
+++ b/content/download/iamd3vil/nats_ex.html
@@ -7,5 +7,5 @@ downloadTags = ["elixir"]
   name = "Elixir"
   weight = 0
   identifier = "NatsEx"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
