--- a/content/download/travelish/SwiftNats.html
+++ b/content/download/travelish/SwiftNats.html
@@ -7,5 +7,5 @@ downloadTags = ["swift"]
   name = "Swift"
   weight = 0
   identifier = "Swift"
-  parent = "nats-comunity"
+  parent = "nats-community"
 +++
