Revert "Merge remote-tracking branch 'origin/master'"
This reverts commit 4263b22b8b0d17a5945903de64049bbf35e5d522, reversing
changes made to d40999fb4f378ab0b4c661b567e9887ef4075f8d.

--- a/content/download/DawnAngel/lua-nats.html
+++ b/content/download/DawnAngel/lua-nats.html
@@ -7,5 +7,5 @@ downloadTags = ["lua"]
   name = "Lua"
   weight = 0
   identifier = "Lua"
-  parent = "nats-community"
+  parent = "nats-comunity"
 +++
