--- a/content/download/jedisct1/rust-nats.html
+++ b/content/download/jedisct1/rust-nats.html
@@ -7,5 +7,5 @@ downloadTags = ["rust"]
   name = "Rust"
   weight = 0
   identifier = "Rust"
-  parent = "nats-community"
+  parent = "nats-comunity"
 +++
