--- a/content/download/carwynmoore/perl-nats.html
+++ b/content/download/carwynmoore/perl-nats.html
@@ -7,5 +7,5 @@ downloadTags = ["perl"]
   name = "Perl"
   weight = 0
   identifier = "Perl"
-  parent = "nats-community"
+  parent = "nats-comunity"
 +++
