--- a/content/download/cloudfoundry-community/java-nats.html
+++ b/content/download/cloudfoundry-community/java-nats.html
@@ -7,5 +7,5 @@ downloadTags = ["java"]
   name = "Spring API"
   weight = 0
   identifier = "Spring API"
-  parent = "nats-community"
+  parent = "nats-comunity"
 +++
