--- a/content/index.html
+++ b/content/index.html
@@ -13,7 +13,7 @@ description = ""
         <a class="homepage-brand" href="/about">
           <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
         </a>
-        <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
+        <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Simple.</span> <span class="nats-colour-blue-dark">Secure.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
         <div class="row">
           <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
             <h2>Introducing <strong>NATS Streaming</strong>: Real-time streaming for Big Data, IoT, Mobile, and Cloud Native Applications</h2>
