Fixing a bunch of mistakes that were made via a revert.
This reverts commit 58590391c051d494731a847b92e682c5735af36c.

# Conflicts:
#	static/css/styles.css.map

--- a/content/download/iamd3vil/nats_ex.html
+++ b/content/download/iamd3vil/nats_ex.html
@@ -1,11 +1,11 @@
 +++
-title = "Spring API NATS Client"
+title = "NatsEx NATS Client"
 description = ""
 downloadCategories = ["clients","community"]
-downloadTags = ["java"]
+downloadTags = ["elixir"]
 [menu.main]
-  name = "Spring API"
+  name = "Elixir"
   weight = 0
-  identifier = "Spring API"
+  identifier = "NatsEx"
   parent = "nats-community"
 +++
