Added minio to partners area

--- a/content/community.html
+++ b/content/community.html
@@ -86,6 +86,9 @@ description = "NATS is a high performance messaging system that acts as a distri
   <div class="col-xs-6 col-md-4">
     <a target="_blank" href="http://www.williamsgarcia.com/"><img src="/img/partners/wg.jpg" class="img-responsive" alt="Williams Garcia"></a>
   </div>
+  <div class="col-xs-6 col-md-4">
+    <a target="_blank" href="http://www.minio.io/"><img src="/img/partners/minio.jpg" class="img-responsive" alt="Minio"></a>
+  </div>
 </div>
 
 <p class="text-center"><a href="mailto:info@nats.io">Contact us to Partner.</a></p>
