Added freebsd to partners on community

--- a/content/community.html
+++ b/content/community.html
@@ -89,6 +89,9 @@ description = "NATS is a high performance messaging system that acts as a distri
   <div class="col-xs-6 col-md-4">
     <a target="_blank" href="http://www.minio.io/"><img src="/img/partners/minio.jpg" class="img-responsive" alt="Minio"></a>
   </div>
+  <div class="col-xs-6 col-md-4">
+    <a target="_blank" href="https://www.freebsd.org/cgi/ports.cgi?query=NATS&stype=all"><img src="/img/partners/freebsd.jpg" class="img-responsive" alt="FreeBSD"></a>
+  </div>
 </div>
 
 <p class="text-center"><a href="mailto:info@nats.io">Contact us to Partner.</a></p>
