Added newsletter and links for rss feed.

--- a/content/community.html
+++ b/content/community.html
@@ -28,15 +28,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row">
 
-  <div class="col-md-4" id="meetup-con">
-    <h2>Events</h2>
-    <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
-    <!-- <div class="meetup-con">
-      <iframe width="225" height="400" src="http://meetu.ps/2R2whQ" frameborder="0"></iframe>
-    </div> -->
-  </div>
-
-  <div class="col-md-4" id="contribute-con">
+  <div class="col-md-6 col-lg-3" id="contribute-con">
     <h2>Ways to Contribute</h2>
     <ul class="list-unstyled">
       <li>Report or Fix Bugs</li>
@@ -49,7 +41,15 @@ description = "NATS is a high performance messaging system that acts as a distri
     <p>Please <a href="mailto:info@nats.io?subject=NATS suggestions">contact us</a> with any other suggestions.</p>
   </div>
 
-  <div class="col-md-4" id="social-con">
+  <div class="col-md-6 col-lg-3" id="meetup-con">
+    <h2>Events</h2>
+    <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
+    <!-- <div class="meetup-con">
+      <iframe width="225" height="400" src="http://meetu.ps/2R2whQ" frameborder="0"></iframe>
+    </div> -->
+  </div>
+
+  <div class="col-md-6 col-lg-3" id="social-con">
     <h2>Social</h2>
     <ul class="social-list list-inline">
       <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
@@ -60,6 +60,11 @@ description = "NATS is a high performance messaging system that acts as a distri
     </ul>
   </div>
 
+  <div class="col-md-6 col-lg-3" id="newsletter-con">
+    <h2>NATS Newsletter</h2>
+    <p>Stay up to date with the latest information on NATS.</p>
+    <a class="btn btn-primary" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd_MAN1MCDpSbZT7hrXmohGNpT0sUtxDCCOBJhmo_t2gvdHhQ/viewform">Sign Up!</a>
+  </div>
 </div>
 
 <hr>
