--- a/content/support.html
+++ b/content/support.html
@@ -15,7 +15,7 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row">
   <div class="col-md-12">
-    <h2>Technical Support for NATS and Clients</h2>
+    <h2>Community Support for NATS and Clients</h2>
     <p>To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.</p>
     <h2>Commercial Support and Services</h2>
     <p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Apcera supported clients listed <a href="/download">here</a>.</p>
