[ADDED] Contributor's Guide (#213)
* [ADDED] Contributor's Guide and associated references in Community and Support

--- a/content/support.html
+++ b/content/support.html
@@ -15,8 +15,12 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row">
   <div class="col-md-12">
+    <h2>Reporting Bugs</h2>
+    <p>If you'd like to report a bug/defect, please open a GitHub Issue on the relevant NATS repository.
+      We've provided some guidelines for doing so <a href="/documentation/CONTRIBUTING#githubissues">here</a>.</p>
     <h2>Community Support for NATS and Clients</h2>
-    <p>To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.</p>
+    <p>Often the quickest way to get help is to start a discussion with other NATS users. There
+      are <a href="/documentation/CONTRIBUTING#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
     <h2>Commercial Support and Services</h2>
     <p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Apcera supported clients listed <a href="/download">here</a>.</p>
     <p><a href="mailto:info@nats.io">Contact</a> us today to learn more about how we can help you get the most out of NATS in your environment.</p>
