Finsihed nats cloud page

--- a/content/about.html
+++ b/content/about.html
@@ -15,10 +15,28 @@ description = "NATS is a high performance messaging queue system designed for di
 </div>
 
 <p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally for thousands of innovative use-cases such as mobile, IoT, microservices and cloud native applications.</p>
-<p>The core NATS Server acts as a central nervous system for building distributed applications. There are dozens of clients ranging from Java, .NET, to GO. NATS Streaming extends the platform to provide for real-time streaming &amp; big data use-cases.</p>
-<p>NATS was created by Derek Collison, Founder and CEO at Apcera in response to the market need for a simple and high performance messaging solution. NATS is currently deployed in some of the largest cloud platforms, including: VMware, CloudFoundry, Baidu, Siemens, and GE. NATS is available under the MIT Open Source License.</p>
 
 <hr>
+
+<div id="about-products">
+  <h2>Products</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <h3>NATS</h3>
+      <p>The core <a href="/download/nats-io/gnatsd/">NATS Server</a> acts as a central nervous system for building distributed applications. There are dozens of clients ranging from Java, .NET, to GO. NATS Streaming extends the platform to provide for real-time streaming &amp; big data use-cases. <span class="read-more-link"><a href="/download/nats-io/gnatsd/">Learn More <i class="fa fa-caret-right" aria-hidden="true"></i></a></span></p>
+    </div>
+    <div class="col-md-4">
+      <h3>NATS Cloud</h3>
+      <p><a href="/nats-cloud">NATS Cloud</a> is a cost-effective, reliable and performant managed messaging service. The potentially unbounded growth of Event Streaming and IOT technology application worldwide presents a unique challenge to companies looking to maximize performance, scalability and efficiency while minimizing operational costs. The underlying data communication platform should be cloud-native, always-on, secure and highly performant. <span class="read-more-link"><a href="/nats-cloud">Learn More <i class="fa fa-caret-right" aria-hidden="true"></i></a></span></p>
+    </div>
+    <div class="col-md-4">
+      <h3>NATS Streaming</h3>
+      <p><a href="/documentation/streaming/nats-streaming-intro/">NATS Streaming</a> is a data streaming system powered by NATS, and written in the Go programming language. The executable name for the NATS Streaming server is nats-streaming-server. NATS Streaming embeds, extends, and interoperates seamlessly with the core NATS platform. <span class="read-more-link"><a href="/documentation/streaming/nats-streaming-intro/">Learn More <i class="fa fa-caret-right" aria-hidden="true"></i></a></span></p>
+    </div>
+  </div>
+</div>
+
+<HR>
 
 <div class="row">
   <div id="canvas-con" class="col-md-8 col-md-offset-2">
@@ -32,6 +50,7 @@ description = "NATS is a high performance messaging queue system designed for di
 
 <div class="row">
   <div class="col-md-6">
+    <p>NATS was created by Derek Collison, Founder and CEO at Apcera in response to the market need for a simple and high performance messaging solution. NATS is currently deployed in some of the largest cloud platforms, including: VMware, CloudFoundry, Baidu, Siemens, and GE. NATS is available under the MIT Open Source License.</p>
     <p>Written in Go, NATS is available as a client for approximately a dozen languages, many of which are supported by the Apcera team. Here’s the full list of <a href="/download">NATS clients</a>.</p>
   </div>
   <div class="col-md-6">
