Updated layout for new version of hugo

--- a/content/support.html
+++ b/content/support.html
@@ -15,14 +15,14 @@ description = "NATS is a high performance messaging system that acts as a distri
 
 <div class="row">
   <div class="col-md-12">
-    <h2>Reporting Bugs</h2>
-    <p>If you'd like to report a bug/defect, please open a GitHub Issue on the relevant NATS repository.
-      We've provided some guidelines for doing so <a href="/documentation/CONTRIBUTING#githubissues">here</a>.</p>
-    <h2>Community Support for NATS and Clients</h2>
-    <p>Often the quickest way to get help is to start a discussion with other NATS users. There
-      are <a href="/documentation/CONTRIBUTING#communityhelp">several public forums</a> where you can discuss NATS with other knowledgeable users.</p>
-    <h2>Commercial Support and Services</h2>
-    <p>Our team has decades of experience in distributed systems messaging, and are here to help you implement and maximize the benefits of a lightweight messaging system in any environment. Support is available for the NATS Server, and the Apcera supported clients listed <a href="/download">here</a>.</p>
-    <p><a href="mailto:info@nats.io">Contact</a> us today to learn more about how we can help you get the most out of NATS in your environment.</p>
+    <h2>Forum Support</h2>
+    <p>Forum Support via engineers from the core NATS.io team, and our development community. Find answers, ask new questions, and contribute your NATS experience by answering questions!</p>
+    <ul class="social-list list-inline">
+      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
+      <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
+    </ul>
+    <h2>Professional Support</h2>
+    <p>Direct access to the most experienced team in enterprise messaging. Get issue resolution, SLAs, and consulting/design help from the NATS team.</p>
+    <p><a href="mailto:info@nats.io">Contact us</a> to discuss a support option that makes sense for you.</p>
   </div>
 </div>
