Added websock client and minor ui update to downloads

--- a/content/about.html
+++ b/content/about.html
@@ -14,7 +14,7 @@ description = "NATS is a high performance messaging queue system designed for di
   </div>
 </div>
 
-<p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally for thousands of innovative use-cases such as mobile, IoT, microservices and cloud native applications.</p>
+<p class="lead">NATS is a family of open source products that are tightly integrated but can be deployed independently. NATS is being deployed globally by thousands of companies, spanning innovative use-cases including: Mobile apps, Microservices and Cloud Native, and IoT. NATS is also available as a hosted solution, <a target="_blank" href="https://www.nats.cloud/">NATS Cloud</a></p>
 <p>The core NATS Server acts as a central nervous system for building distributed applications. There are dozens of clients ranging from Java, .NET, to GO. NATS Streaming extends the platform to provide for real-time streaming &amp; big data use-cases.</p>
 <p>NATS was created by Derek Collison, Founder and CEO at Apcera in response to the market need for a simple and high performance messaging solution. NATS is currently deployed in some of the largest cloud platforms, including: VMware, CloudFoundry, Baidu, Siemens, and GE. NATS is available under the MIT Open Source License.</p>
 
