Updated homepage for nats cloud, added blog post for machine learning and updated webinar post

--- a/content/index.html
+++ b/content/index.html
@@ -10,15 +10,16 @@ description = ""
   <div class="container">
     <div class="row">
       <div id="homepage-content" class="col-md-12">
-        <a class="homepage-brand" href="/about">
-          <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
-        </a>
-        <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Simple.</span> <span class="nats-colour-blue-dark">Secure.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
         <div class="row">
           <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-            <h2>Introducing <strong>NATS Streaming</strong>: Real-time streaming for Big Data, IoT, Mobile, and Cloud Native Applications</h2>
+            <a class="homepage-brand" href="/about">
+              <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
+            </a>
+            <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Simple.</span> <span class="nats-colour-blue-dark">Secure.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
+            <!-- <h2>Introducing <strong>NATS Streaming</strong>: Real-time streaming for Big Data, IoT, Mobile, and Cloud Native Applications</h2> -->
+            <h2>Introducing <strong>NATS Cloud</strong>: NATS, Maintained by our team - so you can focus on innovation, not infrastructure.</h2>
             <p class="extra-info">
-              <a id="download-button" class="btn btn-lg" href="/documentation/streaming/nats-streaming-intro/">Learn More</a>
+              <a id="download-button" class="btn btn-lg" target="_blank" href="https://www.nats.cloud/">Learn More</a>
             </p>
 
             <p class="bottom-info">NATS Server is a simple, high performance open source messaging system for cloud native applications, IoT messaging, and microservices architectures.</p>
