Added a gophercon blog post as well as updated the companies on community page

--- a/content/community.html
+++ b/content/community.html
@@ -133,6 +133,12 @@ description = "NATS is a high performance messaging system that acts as a distri
   <div class="col-xs-6 col-md-3">
     <a target="_blank" href="http://www.baidu.com/"><img src="/img/companies/baidu.jpg" class="img-responsive" alt="Baidu"></a>
   </div>
+  <div class="col-xs-6 col-md-3">
+    <a target="_blank" href="https://www.clarifai.com/"><img src="/img/companies/clarifai.jpg" class="img-responsive" alt="clarifai"></a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a target="_blank" href="https://www.netlify.com/"><img src="/img/companies/netlify.jpg" class="img-responsive" alt="netlify"></a>
+  </div>
 </div>
 
 <div class="row">
