Add office hours

--- a/content/community.html
+++ b/content/community.html
@@ -44,6 +44,8 @@ description = "NATS is a high performance messaging system that acts as a distri
   </div>
 
   <div class="col-md-6 col-lg-3" id="meetup-con">
+    <h2>Office Hours</h2>
+    <p> Feel free to drop by <a href="https://github.com/nats-io/gnatsd#nats-office-hours" target="_blank">NATS Office Hours</a> to ask questions, cover issues, or just listen in and learn more about NATS.</p>
     <h2>Events</h2>
     <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
     <!-- <div class="meetup-con">
